# Prime-Checker-Package

./: .gitignore  README.md  pyproject.toml  test.py
is_prime_checker/src/: README.md  pyproject.toml
is_prime_checker/src/is_prime_checker/: __init__.py  checkPrime.py  prime.py
is_prime_checker/src/tests/: test_prime.py
is_prime_checker/tests/: test_prime.py
src/isprime/: __init__.py  core.py
tests/: test_core.py
