[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "is-prime-checker"
version = "0.1.0"
description = "A simple package to check if a number is prime"
readme = "README.md"
authors = [{ name = "Manish Rakaskoti", email = "newsfeed4554@gmail.com" }]
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["src/is_prime_checker"]
